       of the item for which the log is shown. See issue #68. (Stefan)
- NEW: New menu "Edit" in TortoiseMerge with the entries "Copy" and
       "Find" (Ctrl-C and Ctrl-F still work). (Stefan)
- NEW: Option to make the Merge dialog default the "From:" URL to
       the URL of the selected working copy instead of the last used
       URL in the merge. (Stefan)
- CHG: The ESC key closes the progress dialog. See Issue #96. (Stefan)
- CHG: Reintroduce the doubleclick action in the log dialog. (Stefan)
- CHG: Merge dialog: if the 'use from url' is activated, the 'show log'
       button is disabled for the 'to' url too. (Stefan)
- CHG: The "diff" context menu is now shown for conflicted files too. (Stefan)
- CHG: In the repository browser, when a different revision than HEAD is
       set and the revision button is pressed, the set revision is pre-filled
       in the revision selection dialog instead of HEAD. (Stefan)
- CHG: Remote properties are shown in multiple lines instead of all squeezed
       into one single line when shown from the repository browser. (Stefan)
- BUG: Crash in TSVNCache. See issue #91.
- BUG: File context menu shown if more than one folder was
       selected. See issue #92.
- BUG: Lock dialog could show folders. See issue #93.
- BUG: Commit dialog could crash when sorting. See issue #99.
- BUG: Installation for All Users didn't work properly. (Stefan)
- BUG: A file:/// path wasn't recognized as a valid windows path
       and a warning was shown even if the path was valid. (Stefan)
- BUG: The log dialog was always started from the repobrowser
       at HEAD revision instead of the selected revision. (Stefan)
- BUG: Wrong rendering/resizing of the listview in the folder
       browser dialog when exporting. (Stefan)
- BUG: The number of selected items was shown wrong in the commit dialog
       if an unversioned or deleted item was checked. (Stefan)
- BUG: Add 'Compare with WC/BASE' options to 'Check for Modification'.